# NLP2

./: .gitignore  PROJECT_PLAN.md  README.md  download_model.py  poem_generator.py  pyproject.toml  requirements.txt  sandbox.ipynb  test_metrics_visualization.ipynb
data/processed/: french_poetry_processed.json
data/raw/: french_poetry.json
results/: training_history.json
results/comparison/: comparison_20251223_024634.json  comparison_20260113_145300.json  comparison_20260113_150853.json  comparison_enriched.json
results/evaluations/: llm_evaluations_20260113_175912.json  llm_evaluations_20260113_180141.json  llm_evaluations_20260113_180955.json  llm_evaluations_20260113_181424.json  llm_evaluations_20260113_185405.json  llm_evaluations_20260113_190803.json  llm_evaluations_20260114_110042.json  llm_evaluations_20260114_112252.json
results/iterative/: iterative_20251223_032858.json  iterative_20251223_032858.json.backup  iterative_20260113_145651.json  iterative_20260113_145651.json.backup  iterative_20260113_151821.json  iterative_20260113_151821.json.backup
src/comparison/: __init__.py  helpers.py  run.py  visualization.py
src/evaluation/: __init__.py  llm_judge.py
src/finetuning/: __init__.py  train.py  visualization.py
src/iterative/: __init__.py  critique.py  revision.py  run.py  visualization.py
src/metrics/: __init__.py  advanced_metrics.py  embeddings.py
src/prepare_data/: __init__.py  download.py  eda.py  process.py
src/semantic/: __init__.py  graph_builder.py  graph_visualization.py
src/utils/: __init__.py  metrics_recalculation.py
