[project]
name = "nlp2"
version = "0.1.0"
description = "Générateur de poèmes avec modèles de langage"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["poem_generator.py"]

