[project]
name = "nlp2"
version = "0.1.0"
description = "Générateur de poèmes avec modèles de langage"
requires-python = ">=3.8"
dependencies = [
    "llama-cpp-python>=0.2.0",
    "huggingface-hub>=0.20.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

