[project]
name = "nlp2"
version = "0.1.0"
description = "Générateur de poèmes avec modèles de langage"
requires-python = ">=3.9,<3.14"
dependencies = [
    "llama-cpp-python>=0.2.0",
    "huggingface-hub>=0.20.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.5",
    "pandas>=2.0.3",
    "unsloth[colab-new]",
    "torchvision>=0.23.0",
    "scikit-learn>=1.6.1",
    "sacremoses>=0.1.1",
    "sentence-transformers>=5.1.2",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.3.0",
    "requests>=2.32.5",
]

[tool.uv.sources]
unsloth = { git = "https://github.com/unslothai/unsloth.git" }
